Update rsyslog config to v8 (buster).

--- a/files/rsyslogd.conf
+++ b/files/rsyslogd.conf
@@ -1,10 +1,9 @@
 # File managed by puppet
-
-$ModLoad imfile
-
-$InputFileName /var/log/audit/audit.log  
-$InputFileTag audit  
-$InputFileStateFile audit_log  
-$InputFileSeverity info  
-$InputFileFacility local6  
-$InputRunFileMonitor
+input(
+	type="imfile"
+	File="/var/log/audit/audit.log"
+	Tag="audit"
+	Severity="info"
+	Facility="local6"
+	PersistStateInterval="0"
+)
